--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,10 +1,14 @@
 services:
-  WebEtDesign\FaqBundle\Repository\:
-    resource: '../../Repository/*'
-    autowire: true
-    tags: ['doctrine.repository_service']
+  _defaults:
+    autowire: true      # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-  WebEtDesign\FaqBundle\Controller\FaqController:
-    arguments:
-      - '%wd_faq.config%'
-    tags: ['controller.service_arguments']
+  WebEtDesign\FaqBundle\:
+    resource: '../../*'
+    exclude: '../../{DependencyInjection,Controller,Entity,Migrations,Tests,Kernel.php}'
+
+  WebEtDesign\FaqBundle\Controller\:
+    resource: '../../Controller/*'
+    tags: [ 'controller.service_arguments' ]
+
+
