--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
   ],
   "require": {
     "php": "^7.4",
-    "a2lix/translation-form-bundle": "^3.0",
-    "doctrine/common": "^2.7",
-    "doctrine/doctrine-bundle": "^1.10",
+    "doctrine/common": "^2.11 || ^3.0",
+    "doctrine/doctrine-bundle": "^1.12 || ^2.0",
+    "doctrine/orm": "^2.6.4 || ^3.0",
     "doctrine/inflector": "^1.1",
-    "doctrine/orm": "^2.6",
+    "a2lix/translation-form-bundle": "^3.0",
     "knplabs/doctrine-behaviors": "^2.0",
     "pixassociates/sortable-behavior-bundle": "^1.5",
     "sonata-project/media-bundle": "^3.18",
