--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^7.4",
+    "php": "^7.4 || ^8.0",
     "doctrine/common": "^2.11 || ^3.0",
     "doctrine/doctrine-bundle": "^1.12 || ^2.0",
     "doctrine/orm": "^2.6.4 || ^3.0",
