--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "doctrine/inflector": "^2.0 || ^1.1",
     "a2lix/translation-form-bundle": "^3.0",
     "knplabs/doctrine-behaviors": "^2.0",
-    "webetdesign/wd-sortable-bundle": "3.0.*",
+    "webetdesign/wd-sortable-bundle": "^3.0",
     "stof/doctrine-extensions-bundle": "^1.3",
     "symfony/config": "^5.4",
     "symfony/dependency-injection": "^5.4",
