--- a/composer.json
+++ b/composer.json
@@ -16,27 +16,29 @@
     }
   ],
   "require": {
-    "php": "^8.0",
+    "php": "^8.2",
     "doctrine/common": "^2.11 || ^3.1",
     "doctrine/doctrine-bundle": "^1.12 || ^2.0",
     "doctrine/orm": "^2.6.4 || ^3.0",
     "doctrine/inflector": "^2.0 || ^1.1",
     "a2lix/translation-form-bundle": "^3.0",
     "knplabs/doctrine-behaviors": "^2.0",
-    "webetdesign/wd-sortable-bundle": "^3.0",
+    "webetdesign/wd-sortable-bundle": "4.0.*",
     "stof/doctrine-extensions-bundle": "^1.3",
-    "symfony/config": "^5.4",
-    "symfony/dependency-injection": "^5.4",
+    "symfony/config": "^6.2",
+    "symfony/dependency-injection": "^6.2",
     "symfony/doctrine-bridge": "^4.2|^5.0",
-    "symfony/event-dispatcher": "^5.4",
-    "symfony/expression-language": "^5.4",
+    "symfony/event-dispatcher": "^6.2",
+    "symfony/expression-language": "^6.2",
     "sonata-project/admin-bundle": "4.* || ^3.45",
-    "symfony/filesystem": "^5.4",
-    "symfony/twig-bundle": "^5.4",
-    "symfony/yaml": "^5.4"
+    "symfony/filesystem": "^6.2",
+    "symfony/twig-bundle": "^6.2",
+    "symfony/twig-bridge": "^6.2",
+    "symfony/form": "^6.2",
+    "symfony/yaml": "^6.2"
   },
   "require-dev": {
-    "symfony/phpunit-bridge": "^5.4"
+    "symfony/phpunit-bridge": "^6.2"
   },
   "config": {
     "sort-packages": true
