--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "stof/doctrine-extensions-bundle": "^1.3",
     "symfony/config": "^6.2",
     "symfony/dependency-injection": "^6.2",
-    "symfony/doctrine-bridge": "^4.2|^5.0",
+    "symfony/doctrine-bridge": "^6.2",
     "symfony/event-dispatcher": "^6.2",
     "symfony/expression-language": "^6.2",
     "sonata-project/admin-bundle": "4.* || ^3.45",
